  host as an IMailHost.  Fixes a test failure in PasswordResetTool
  (once I let that use this test case).  Change taken over from Plone
  trunk.
  [maurits]

- Do not display the author contact form when the author has no email
  (for example for openid users).
  Refs http://dev.plone.org/plone/ticket/8707
  [maurits]


3.3.3 - December 8, 2009
------------------------

- Added tal condition to check if the user object is None when rendering
  pref_group_members.cpt since group assignments are not deleted when
  a user is deleted.
  This addresses http://dev.plone.org/plone/ticket/9885
  [vangheem]

- Increased maximum length of the sortable_title index from 30 to 40 characters
  to ensure titles containing an ISO date can be sorted.
  [hannosch]

- Added scroll to anchor tag in toc.js because Firefox was not bringing a user 
  to any anchor tags when a link was directly given to one.
  This closes http://dev.plone.org/plone/ticket/9364
  [vangheem]

- Fixed untranslatable info message "The username you entered could not be
  found" and other messages in RegistrationTool.py.
  This closes http://dev.plone.org/plone/ticket/9744
  [vincentfretin]

- Configlets title can now use a different domain than plone.
  This closes http://dev.plone.org/plone/ticket/9738
  [vincentfretin]

- Fixed "Manage portlets" not translated when there is no portlet visible.
  This closes http://dev.plone.org/plone/ticket/8454
  [vincentfretin]

- Better validation and error messages for group create/edit form.
  Fixes http://dev.plone.org/plone/ticket/9667
  [lzdych]

- plone.css will now output stylesheets with link rendering
  Fixes http://dev.plone.org/plone/ticket/9366

  sitemap template now displays objects without a value for Title
  applied patch from crchemist
  Fixes http://dev.plone.org/plone/ticket/9775
  [aaronv]

- Removed option "Send a mail with the password" from the join form,
  as we never send an email with the password.
  Refs http://dev.plone.org/plone/ticket/9670