@@ -29,6 +29,10 @@ Changelog
 3.3.3 - December 8, 2009
 ------------------------
 
+- Don't add a .zem extension for the external editor except on OS X. This
+  closes http://dev.plone.org/plone/ticket/9888
+  [tbenita, davisagli]
+
 - Added tal condition to check if the user object is None when rendering
   pref_group_members.cpt since group assignments are not deleted when
   a user is deleted.
